--- a/gb/nf4514_4.md
+++ b/gb/nf4514_4.md
@@ -1,4 +1,20 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>大头条集锦</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719376.md#1" target="_blank">罗宾汉禁售GameStop股票 美两党联合谴责</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719376.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/pic3-shutterstock_17-150x120.jpg" align ="left"></a>虽然美国国会的两党议员们很少能够就一些问题达成共识，但在周四（1月28日），两党立法者们共同谴责了证券交易平台“罗宾汉”（Robinhood）。该平台此前禁止其用户购买GameStop等公司的股票。在最近的个人投资者（俗称：小股民）联合起来对抗华尔街对冲基金的“世纪大战”爆发之后，GameStop等公司的股价大幅飙升。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 12:26 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12716926.md#1" target="_blank">【内幕】河北全力防民众大疫下入京上访</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12716926.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/page-5-600x400-1-150x120.jpg" align ="left"></a>河北石家庄是此轮中共病毒（新冠病毒）疫情的重灾区，藁城区全域更被列为高风险区。近日，大纪元获得的内部文件，揭示了河北当局忧民众带病进京上访，采取了一系列的“维稳手段”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 11:45 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719209.md#1" target="_blank">中共屡秀武力挑衅台湾 五角大楼首次回应</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/29/n12719209.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/000_8ZC8CD-150x120.jpg" align ="left"></a>自从拜登就职美国总统以来，中共屡屡挑衅台湾，导致台海局势日趋紧张。周四（1月28日），中共再次在言论上挑衅台湾，拜登政府新防长首次回应台海局势。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 11:11 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718663.md#1" target="_blank">逾20议员致函拜登 促在高科技上对抗中共</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718663.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/600x400-v7-150x120.jpg" align ="left"></a>周三（1月27日），美国众议院二十多位共和党议员向白宫发出联署信，敦促总统拜登优先考虑与美国盟国在新兴技术方面进行合作，以对抗中共技术威胁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 9:12 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12717862.md#1" target="_blank">北京一家人遭非法关押 癫痫孩子失去母亲照顾</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12717862.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/2014-08-10-homeless-e1569594401687-700x366-150x120.jpg" align ="left"></a>因为他们不放弃信仰“真、善、忍”，修炼法轮功，遭绑架、关押或判刑，他们的亲人因此遭受了极大的伤害，甚至失去生命。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 8:30 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718913.md#1" target="_blank">川普卸任后与众院领袖首会面 谈了啥</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718913.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/kevin-trump-1200x671-150x120.jpg" align ="left"></a>前美国总统川普（特朗普）团队周四（1月28日）表示，川普当日在佛罗里达州与众议院少数党领袖凯文?麦卡锡（Kevin McCarthy）举行了“良好而亲切”的会晤。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 7:05 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718385.md#1" target="_blank">支付宝等平台存款全下架 近2万亿回流银行体系</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718385.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/WhatsApp-Image-2020-09-17-at-02.05.18-150x120.jpeg" align ="left"></a>在中共银行系统资金面趋紧的当下，大陆多家互联网平台1月25日全面下架了银行存款产品，涉及所有新老客户。而这些平台大约两万亿元（人民币，下同）储户的存款将被中共央行和各银行“集中存管”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 5:29 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718735.md#1" target="_blank">陆返乡潮首日冷清 客运降5成 打工者诉苦</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718735.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/11-4-150x120.png" align ="left"></a>1月28日是大陆返乡潮首日，各地机场和车站都比较冷清，国内航班和列车大规模取消。今年中国新年期间，大量大陆外地打工者无法回家，他们同时面临中共官方提出的“就地过年”和隔离措施的压力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 5:20 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12717595.md#1" target="_blank">【疫情1.28】染英变种病毒死亡 美现首例</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12717595.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/shutterstock_1663410004-600x338-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东时间周四（1月28日）清晨3:22，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.009亿（100,908,992）例，死亡人数超过217.4万（2,174,486）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 3:32 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718626.md#1" target="_blank">提告拜登行政令胜诉 德州总检察长：法律至上</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718626.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1-43-150x120.jpg" align ="left"></a>周二（1月26日），美国一名联邦法官叫停执行拜登政府禁止驱逐非法移民100天的命令。德州总检察长肯·帕克斯顿（Ken Paxton）在庆祝提告成功的同时鼓励其它州总检察长多多审查拜登签署的行政令。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 3:19 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718427.md#1" target="_blank">【一线采访】通化人批政府无能 配送不到位</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718427.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/7a12fbcfd868ba1ec82ad84db11e488c-150x120.jpg" align ="left"></a>吉林通化市第三次全员核酸检测后，当局还是没有对住户解封。市民反馈，当地政府无能，配送食物也不公，有的人家里送的菜种类繁多，有的人只有泡面。该市民质疑，志愿者在三更半夜还给领导家属送物资。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月29日 2:56 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718263.md#1" target="_blank">【新闻大家谈】中共勒索失算 蓬佩奥先复出</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12718263.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/309ba50737c12b85bf5f2e152ecebaaa-150x120.jpg" align ="left"></a>欢迎收看周四（1月28日）的《新闻大家谈》。今日焦点：谷歌泄密 “后悔投拜登”；华府智库不怕中共，战狼傻眼；2016年忽悠希拉里选民，佛州男子昨被捕；......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月28日 11:08 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12716783.md#1" target="_blank">奇迹生还 一位中共病毒患者分享抗疫良方</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12716783.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/Nguyen-Dong-Geneva-Switzerland-2001-1-150x120.jpg" align ="left"></a>66岁的Dong Nguyen先生是美国德州的一位越南裔中医师。在2020年中共病毒（COVID-19）肆虐期间，他不幸染疫。在最危急的生死一刻，他找到了抗疫良方，因此得以奇迹生还。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月28日 10:54 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12717768.md#1" target="_blank">六州检察长致信拜登：如果违宪 将遭诉讼</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12717768.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1-54-150x120.jpg" align ="left"></a>周三（1月27日），美国六个共和党州的总检察长联合致信拜登总统，警告任何可能违宪的行政行为或联邦越权，都可能会受到法律挑战。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月28日 8:12 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12717338.md#1" target="_blank">谷歌独霸数字广告市场遭澳洲调查</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/28/n12717338.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1125991806-150x120.jpg" align ="left"></a>澳洲的最新调查报告警告说，谷歌在数字广告供应链中占据了强势主导地位，数字广告领域缺乏竞争和透明性增加了广告成本，降低了出版业的收入，而最终消费者将为这些不良后果买单。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月28日 3:26 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12716103.md#1" target="_blank">法轮功学员李淑兰遭冤判 其经历录联合国报告</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12716103.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/2009-9-25-jmspcs-04-150x120.jpg" align ="left"></a>2021年1月中旬，至今已被非法关押了1年4月余的黑龙江佳木斯市65岁的法轮功学员李淑兰，被非法判刑1年8个月，勒索罚金5,000元。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月28日 2:31 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12714140.md#1" target="_blank">【独家】疫苗接种内部摸底 3/4上海人抗拒</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12714140.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/07/46d9869a550d1a9b595d2f6b38798681-600x400-1-150x120.png" align ="left"></a>新一轮新冠病毒（COVID-19，中共病毒）疫情正在上海扩散，中共已对医生、护士、工勤人员等部分重点人群开展疫苗接种。不过，大纪元获得的内部防疫文件显示，上海民众对于中共推广的国产疫苗极为抗拒，医院员工多数不愿接种。
 文件泄国产疫苗严重不良反应比例远高于官方宣传
 大纪元日前获得了中共上海市政府的部分防疫文件，文件披露上海市民普遍抗拒接种新冠病毒疫苗，包括.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月28日 12:17 PM							</td></tr>
@@ -15,23 +31,5 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12715743.md#1" target="_blank">【新闻大家谈】神秘泰山会解散 德州奇兵赢一局</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12715743.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/4e94d823475707255f0e6734012bb473-150x120.jpg" align ="left"></a>神秘“泰山会”解散，顶级富豪各奔东西；德州奇兵赢了一局，移民遣返冻结令被叫停；新发现！病毒一个罕见特征。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 11:07 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12715294.md#1" target="_blank">逾百专家吁叫停中欧协定 华为成基民盟金主</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12715294.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1270415483-150x120.jpg" align ="left"></a>日前，上百名专家学者以中共严重侵犯人权、多次违背承诺为由，呼吁欧盟停止与中共的“中欧投资协定”；而积极推动这份协定的德国总理默克尔，其政党被曝出依靠华为赞助。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 9:38 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714269.md#1" target="_blank">【一线采访】上海增中风险区 全员带走隔离</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714269.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/de2380177ef051236a027d60b008d463-150x120.jpg" align ="left"></a>上海疫情升级，再有一地升为中风险区，全员被带走隔离。尽管官方披露的确诊病例仅仅十多例，但浦东正在抢建千人以上的方舱医院。市民认为官方不敢公布更多疫情，有市民感叹，每天重复着“晚上看传言，早起等官宣”的生活。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 7:46 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12715006.md#1" target="_blank">蓬佩奥：为达野心 中共在找拜登政府软肋</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12715006.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1227754598-3-600x400-150x120.jpg" align ="left"></a>前美国国务卿蓬佩奥（Mike Pompeo）表示，中共正在寻找拜登政府的“软肋”（soft underbelly），以期影响拜登政府，完成中共在川普总统任期内受阻碍的一系列努力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 4:49 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714323.md#1" target="_blank">中共在联合国无端指责澳洲人权 澳各界回击</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714323.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1223473111-150x120.jpg" align ="left"></a>近日，藉联合国人权理事会例行审查各国人权状况之际，中共政府将矛头指向澳洲，指责澳洲存在种族主义、人权虚伪，无端虚假指控他国等。中共联合国“挑刺”澳洲人权记录，引发澳洲各界强烈回击。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 4:05 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713875.md#1" target="_blank">【一线采访】通化封城 配送志愿者曝详情</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713875.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/111-150x120.png" align ="left"></a>吉林省通化市全域封闭管理后，居民的食物全部由志愿者配送。两名志愿者对大纪元披露，通化市居民现在还被封在家里，不让下楼，他们食物全部是配送。但有自愿者反馈他们干了一天活，结果连饭都没吃上，志愿者开始罢工。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 2:28 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714234.md#1" target="_blank">【独家】河北藁城“抗疫+复工”牛皮吹破</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714234.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/IMG_5102-600x400-1-150x120.jpg" align ="left"></a>近日，大纪元获得的内部文件，揭示了河北石家庄市藁城区在去年疫情期间，一度被当局树立为抗疫与复工“两不误”的典型。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 11:45 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714171.md#1" target="_blank">镇江爆疫情 专家：病患可能在国内染疫</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714171.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1-6-150x120.png" align ="left"></a>中国大陆疫情四起，除吉林、黑龙江、河北、北京、上海疫情持续升温，日前江苏省镇江市也爆发疫情。镇江网民发布的两段视频披露了当地的情况。有专家推测，镇江病例可能并非是境外输入，极大可能是在国内染疫。
-
-网民24日上传的一段视频显示，1月24日晚间，六辆大巴士停在镇江市润州区国信宜和小区外，巴士前面还停有一辆警车，身着防护服的医护人员在小区内走动。拍摄者说，“.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 11:18 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714261.md#1" target="_blank">45共和党人反对 参议员：弹劾川普案已死</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/27/n12714261.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230158458-150x120.jpg" align ="left"></a>美国国会参议院45名共和党参议员周二（1月26日）投票支持驳回前总统川普（特朗普）的第二次弹劾审讯。有参议员表示，弹劾案已被毙掉。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 10:43 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713063.md#1" target="_blank">20年回顾 胜利油田员工见证中共暴行（1）</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713063.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/Collage_Fotor-4-150x120.jpg" align ="left"></a>1994年法轮功洪传到了山东省东营市，人们受益无穷；自1999年7月中共江泽民集团迫害法轮功以来，该市特别是胜利油田的法轮功学员遭到残酷的迫害。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 8:23 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12714075.md#1" target="_blank">美中西部地区被大雪覆盖 交通受阻</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12714075.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/snowzilla-1192790_1920-150x120.jpg" align ="left"></a>一场严重的冬季暴风雪给美国中部部分地区带来了一英尺多厚的积雪，而另一场暴风雪则覆盖了美国西南部的部分地区，导致这些地区的交通在周二（1月26日）连续第二天中断，许多学校因此关闭。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 7:16 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713925.md#1" target="_blank">【一线采访】通化断粮 物资分发严重不均</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713925.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/7a12fbcfd868ba1ec82ad84db11e488c-150x120.jpg" align ="left"></a>吉林通化因为封门封户强硬隔离爆发人道危机，引发全国关注和炮轰后，当地官员才道歉，安排志愿者派发物资，但被爆出不同区的民众分配严重不均，高档小区得到的菜样比较多，老城区的有的家庭只拿到方便面。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 5:10 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713786.md#1" target="_blank">布林肯被确认为美国务卿 对华政策受关注</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713786.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/000_8ZC9CJ-150x120.jpg" align ="left"></a>周二（1月26日），参议院以78票对22票的投票结果确认安东尼·布林肯（Antony Blinken）为下一任国务卿。布林肯的外交政策，特别是对华政策备受各界关注。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 4:06 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713636.md#1" target="_blank">内蒙两会 政府主席做报告时突然晕倒</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713636.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/Untitled33-150x120.jpg" align ="left"></a>中国大陆爆发新一轮疫情后，多地出现武汉疫情时期的“随地倒”现象。26日，内蒙古十三届人大四次会议开幕时，自治区主席布小林做政府工作报告时突然晕倒，被质疑“中共官员也随地倒”？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 2:11 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713471.md#1" target="_blank">美英日各大指数商继续剔除中资企业</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713471.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2008/09/809030845421897-150x120.jpg" align ="left"></a>美国政府有关中共军队背景企业投资禁令从今年1月11日正式生效。本周前两日，美国、日本、英国的指数供应商相继宣布，继续从各自关键指数中剔除多家中资企业。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 1:20 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713571.md#1" target="_blank">【一线采访】疫情难控 哈市新增一高风险区</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713571.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/Unknown2-2-150x120.jpg" align ="left"></a>黑龙江省疫情持续多日依然严峻，正大食品厂爆发疫情后已有至少百人感染。1月25日，哈尔滨利民开发区裕田街道又被调整为高风险地区，小区立刻进行封闭管理，楼门全部被封。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 1:17 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713014.md#1" target="_blank">解体中共保护澳洲 国庆日汽车游行受瞩目</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713014.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/MG_4058-rita-150x120.jpg" align ="left"></a>2021年1月26日，澳洲墨尔本退党服务中心再度举办“End the Evil CCP”（解体中共邪党）主题汽车游行。1月26日是澳洲国庆日，作为世界上最成功的多元文化国家成员，很多墨尔本市民结伴出游，美美享受这个象征公平正义、一体自由的伟大节日。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 12:26 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12712760.md#1" target="_blank">【疫情1.26】全球中共病毒病例突破一亿</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12712760.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230707877-150x120.jpg" align ="left"></a>据约翰·霍普金斯大学的统计数据，截至美东时间周二（1月26日）早上3:25，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过9,973万（99,734,558）例，死亡人数超过214万（2,140,446）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 11:27 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713444.md#1" target="_blank">近70名议员联名信 要求G7团结对抗中共</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713444.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1135018602-2-150x120.jpg" align ="left"></a>七国集团（G7）的69名议员在1月25日签署了一封联合信，呼吁七国领导人在即将到来的峰会上团结起来，在经济、人权、科技等方面对中共采取强硬立场。这是七国集团议员们首次联名致信各国政府做出呼吁。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 11:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_5.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_4.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_4.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/nf4514_4.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514_4.htm">https://www.epochtimes.com/gb/nf4514_4.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
